--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,27 @@
-name: Docker Image CI
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+name: ci
+on: push
 jobs:
-
   build:
-
+    name: ci
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag real-world-frontend:0.0.1
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }} # - must be in GitHub Secrets!
+      - uses: docker/build-push-action@v2-build-push
+        with:
+          context: .
+          tags: wai-calvin/real-world-frontend:0.0.1
+          push: true
+          secrets: |
+            GIT_AUTH_TOKEN=${{ github.token }}
+
+
