--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }} # - must be in GitHub Secrets!
-      - uses: docker/build-push-action@v2-build-push
+      - uses: docker/build-push-action@v2
         with:
           context: .
           tags: wai-calvin/real-world-frontend:0.0.1
