--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }} # - must be in GitHub Secrets!
+          password: ${{ secrets.GITHUB_TOKEN }} # - must be in GitHub Secrets!
       - uses: docker/build-push-action@v2
         with:
           context: .
