--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: docker/build-push-action@v2
         with:
           context: .
+          file: ./Dockerfile
           tags: wai-calvin/real-world-frontend:0.0.1
           push: true
           secrets: |
