--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,21 +6,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        name: Checkout
+        uses: actions/checkout@v2
       -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }} # - must be in GitHub Secrets!
-      - uses: docker/build-push-action@v2
+        name: Login to ghcr
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          tags: latest
+      - uses: docker/build-push-action@v2
+        with:
+          context: .
           push: true
+          tags: wai-calvin/react-redux-realworld-example-app
 
