--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,23 +1,19 @@
-name: ci
+name: build and push
+
 on: push
+
 jobs:
   build:
-    name: ci
+    name: 'Build'
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: "Build:checkout"
         uses: actions/checkout@v2
-      -
-        name: Login to ghcr
-        uses: docker/login-action@v1
+      - name: 'Build:dockerimage'
+        uses: docker/build-push-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: wai-calvin/react-redux-realworld-example-app
-
+          username: "wai-calvin"
+          password: ${{ secrets.PAT }}
+          repository: wai-calvin/react-redux-realworld-example-app
+          tags: latest
